<resources>
    <string name="app_name">TitanTrack</string>

    <!-- Strings para el login -->
    <string name="login_title">TitanTrack</string>
    <string name="login_subtitle">Gestión Fitness</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="prompt_no_account">¿No tiene cuenta?Regístrese aquí</string>

    <!-- Strings del Registro -->
    <string name="register_title">Alta de Usuario</string>
    <string name="register_subtitle">Crea tu perfil de entrenamiento</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="btn_register">Crear cuenta</string>
    <string name="prompt_have_account">¿Ya tiene cuenta? Inicia sesión</string>

    <!-- Dashboard y navegación multisección -->
    <string name="dashboard_title">TitanTrack Dashboard</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_workouts">Rutinas</string>
    <string name="nav_profile">Perfil</string>
    <string name="section_welcome">Bienvenido al panel de tus entrenamientos</string>
    <string name="section_home">Sección: Panel de inicio</string>
    <string name="section_workouts">Sección: Rutinas y Ejercicios</string>
    <string name="section_profile">Sección: Perfil de Usuario</string>
</resources>